# gitlab2sheet

./: .pre-commit-config.yaml  README.md  dockerfile  install.sh  pyproject.toml
src/: googlesheet.py  issue.py  main.py
tests/: test_issue.py
