[tool.poetry]
name = "gitlab2sheet"
version = "0.1.0"
description = "This project allows you to track issues in all GitLab projects with the assignee, labels, epic and spent time."
authors = ["clement.hector <clement.hector@fixstudio.com>"]
license = "Apache License V2.0"

[tool.poetry.dependencies]
python = "^3.9"
functions-framework = "^3.3.0"
pandas = "^2.0.0"

[tool.poetry.dev-dependencies]
pre-commit = "^3.2.2"
pytest = "^7.3.1"
black = "^23.3.0"
pycln = "^2.1.3"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.pycln]
all = true

[tool.isort]
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
